--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Parak Karambia Silokek</title>
 
-    <base href="https://riva-febtriani.github.io/parak-karambia/">
+    <base href="https://Wisata0.github.io/Parak-Karambia-Silokek/">
  
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -311,3 +311,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
   </body>
 </html>
+
